converted docs to HTML and made a start on improving the content - more work still needed here

--- a/package.yaml
+++ b/package.yaml
@@ -39,6 +39,11 @@ dependencies:
 - esqueleto
 - servant-docs
 - http-types
+- cmark
+- http-media
+- lens
+- base-compat
+- string-conversions
 
 library:
   source-dirs: src
