quickcheck 'not500' test - which fails, for reasons I still can't figure out

--- a/package.yaml
+++ b/package.yaml
@@ -46,6 +46,7 @@ dependencies:
 - string-conversions
 - containers
 - mtl
+- wai-logger
 
 library:
   source-dirs: src
@@ -74,3 +75,5 @@ tests:
     - hspec
     - servant-client
     - http-client
+    - servant-quickcheck
+    - hspec-wai
