refactored to use in-memory database for tests (tests now fail because the test doesn't yet insert anything to the database)

--- a/package.yaml
+++ b/package.yaml
@@ -29,6 +29,7 @@ dependencies:
 - servant-server
 - persistent
 - persistent-postgresql
+- persistent-sqlite
 - persistent-template
 - monad-logger
 - resourcet
